# Job-Application-Tracker

./: .gitignore  README.md  pyproject.toml
app/: main.py  repository.py  schemas.py
app/routes/: applications.py
tests/: test_applications.py
